Publish wording update related to stats

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <h1></h1>
     <p>Hey! I go by Sen.</p>
 <p>I&rsquo;d like to share my experience building a product. My goal is to help other people turning their own idea into a real product!</p>
-<p>Since 2 years ago, I&rsquo;ve been building a <a href="https://en.wikipedia.org/wiki/Software_as_a_service">SaaS</a> product called <a href="https://typinghero.app">Typing Hero</a> on the side. To date, Typing Hero is proud to serve <strong>16K+ active users</strong> and reliably expanding text for <strong>11M+ times</strong> each month, without spending a penny on advertising.</p>
+<p>Since 2 years ago, I&rsquo;ve been building a <a href="https://en.wikipedia.org/wiki/Software_as_a_service">SaaS</a> product called <a href="https://typinghero.app">Typing Hero</a>. To date, Typing Hero helps <strong>16K+ active users</strong> to expand text <strong>11M+ times</strong> per month. All were done on the side without spending a penny on advertising.</p>
 <p>If you&rsquo;d like to know how I did what works for me, you can follow or reach out to me on the following platforms.</p>
 <ul>
 <li><a href="https://twitter.com/theothersen">Twitter</a></li>
